<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Love Letters</string>
    <string name="action_settings">Settings</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="birthday">Birthday:</string>
    <string name="nextButton">Next</string>

    <!-- Fields Activity Strings -->
    <string name="title_activity_fields">Fields</string>
    <string name="filter_view">Filter View</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="restaurant">Restaurant:</string>
    <string name="park">Park:</string>
    <string name="theater">Theater:</string>
    <string name="location">Location:</string>
    <string name="time">Time:</string>
    <string name="build_message">Build Message</string>
    <string name="fields">Fields</string>

     <!-- Confirm Activity Strings -->
    <string name="confirm_send">Confirm Message Build?</string>
    <string name="send_message">Send</string>
    
    <string-array name="GirlType">
        <item>Blonde</item>
        <item>Brunette</item>
        <item>Asian</item>
        <item>Indian</item>
    </string-array>
    <string-array name="FirstDate">
        <item>Romantic Restaurant</item>
        <item>Walk Around the Park</item>
        <item>Clubbing</item>
    </string-array>

    <string name="GirlTypeString">Girl Type</string>
    <string name="FirstDateString">First Date</string>
    <string name="title_activity_filters">Filters</string>
    <string name="NextString">Next</string>
    <string name="title_activity_confim">ConfimActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="time_previous">Last Time</string>
    <string name="time_next">Next Time</string>
    <string name="location_last">Last Place</string>
    <string name="location_next">Next Place</string>

</resources>
