<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/userFirstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="27dp"
        android:text="@string/firstName" />

    <EditText
        android:id="@+id/userFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userFirstNameText"
        android:layout_below="@+id/userFirstNameText"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/userLastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userFirstName"
        android:layout_below="@+id/userFirstName"
        android:text="@string/lastName" />

    <EditText
        android:id="@+id/userLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userLastNameText"
        android:layout_below="@+id/userLastNameText"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/userPhoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userLastName"
        android:layout_below="@+id/userLastName"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/userPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userPhoneText"
        android:layout_below="@+id/userPhoneText"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/userEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userPhone"
        android:layout_below="@+id/userPhone"
        android:text="@string/email" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userEmailText"
        android:layout_below="@+id/userEmailText"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/userBirthdayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userEmail"
        android:layout_below="@+id/userEmail"
        android:text="@string/birthday" />

    <EditText
        android:id="@+id/userBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userBirthdayText"
        android:layout_below="@+id/userBirthdayText"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:text="@string/nextButton" />

</RelativeLayout>
