
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".FieldsActivity" >
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="42dp"
	        android:text="@string/first_name"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/firstText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/textView1"
	        android:layout_alignBottom="@+id/textView1"
	        android:layout_marginLeft="19dp"
	        android:layout_toRightOf="@+id/textView1"
	        android:ems="10"
	        android:inputType="textPersonName" >

	        <requestFocus />

	    </EditText>
	
	    <EditText
	        android:id="@+id/lastText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/firstText"
	        android:layout_below="@+id/firstText"
	        android:layout_marginTop="22dp"
	        android:ems="10"
	        android:inputType="textPersonName" >
	    </EditText>
	
	    <TextView
	        android:id="@+id/TextView01"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/lastText"
	        android:layout_alignBottom="@+id/lastText"
	        android:layout_alignLeft="@+id/textView1"
	        android:text="@string/last_name"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/TextView02"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/lastText"
	        android:layout_marginTop="26dp"
	        android:layout_toLeftOf="@+id/firstText"
	        android:text="@string/restaurant"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/TextView04"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/TextView02"
	        android:layout_below="@+id/TextView03"
	        android:layout_marginTop="27dp"
	        android:text="@string/theater"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/TextView03"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/TextView04"
	        android:layout_below="@+id/TextView02"
	        android:layout_marginTop="28dp"
	        android:text="@string/park"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/TextView05"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/TextView04"
	        android:layout_below="@+id/TextView04"
	        android:layout_marginTop="20dp"
	        android:text="@string/time"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/TextView06"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/TextView01"
	        android:layout_below="@+id/TextView05"
	        android:layout_marginTop="23dp"
	        android:text="@string/location"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/locationText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/TextView06"
	        android:layout_alignBottom="@+id/TextView06"
	        android:layout_alignLeft="@+id/theaterText"
	        android:ems="10"
	        android:inputType="text" />
	
	    <EditText
	        android:id="@+id/timeText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/locationText"
	        android:layout_alignLeft="@+id/locationText"
	        android:ems="10"
	        android:inputType="time" />
	
	    <Button
	        android:id="@+id/filterNextBtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignRight="@+id/locationText"
	        android:layout_below="@+id/locationText"
	        android:layout_marginTop="35dp"
	        android:text="@string/build_message" />
	
	    <EditText
	        android:id="@+id/parkText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/TextView04"
	        android:layout_alignLeft="@+id/lastText"
	        android:ems="10"
	        android:inputType="text" />
	
	    <EditText
	        android:id="@+id/restaurantText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/TextView02"
	        android:layout_alignLeft="@+id/lastText"
	        android:ems="10"
	        android:inputType="text" />

	    <EditText
	        android:id="@+id/theaterText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/TextView04"
	        android:layout_alignBottom="@+id/TextView04"
	        android:layout_alignLeft="@+id/parkText"
	        android:layout_alignRight="@+id/parkText"
	        android:ems="10"
	        android:inputType="text" />
	
	</RelativeLayout>
</ScrollView>