<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
    	<LinearLayout 
		    android:id="@+id/LinearLayout1"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    tools:context=".MainActivity" >
		
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/GirlTypeString"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <Spinner
		        android:id="@+id/spinner1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="98dp"
		        android:entries="@array/GirlType" />
		
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/FirstDateString"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <Spinner
		        android:id="@+id/spinner2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:entries="@array/FirstDate" />
		
		    <Button
		        android:id="@+id/filterNextBtn"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="bottom|right"
		        android:text="@string/NextString" />
	
	</LinearLayout>
</ScrollView>